Release V1.11.2 (#85)